# timeManager

./: CMakeLists.txt  Programa.c  README.md  control.c  interface.c  param.h  run.sh  time.c
options/: initialMenu.txt  menu.txt
src/: main.c
src/libs/: control.c  initialize.c  interface.c  linked.c  logs.c  menu.c  param.h  structures.h  time.c  window.c
